feat: adds all deck page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,155 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recallr: Flash Cards for smarter learning</title>
-
-    <style>
-      h1,
-      h2 {
-        margin: 0;
-      }
-      body {
-        margin: 0;
-      }
-      header {
-        padding: 1em 0;
-        background-color: #0077b6;
-      }
-      header h1 {
-        color: white;
-      }
-
-      #logo {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5em;
-        width: fit-content;
-        cursor: pointer;
-      }
-
-      .container {
-        max-width: 800px;
-      }
-
-      header > .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 auto;
-        padding: 1em 1em;
-      }
-
-      nav > ul {
-        list-style: none;
-        display: flex;
-        gap: 1em;
-      }
-
-      nav > ul > li > a {
-        color: white;
-        font-weight: bold;
-      }
-
-      .hero {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 4em 2em;
-        background: linear-gradient(to right, #f0f4ff, #ffffff);
-        gap: 2em;
-        flex-wrap: wrap;
-      }
-
-      .hero img {
-        max-width: 100%;
-        width: 400px;
-        height: auto;
-        border-radius: 1em;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      .hero .container {
-        max-width: 600px;
-      }
-
-      .hero h2 {
-        font-size: 2.5em;
-        margin-bottom: 1em;
-        font-weight: bold;
-        color: #333;
-      }
-
-      .hero p {
-        font-size: 1.125em;
-        line-height: 1.6;
-        color: #555;
-      }
-
-      .cta-button {
-        padding: 0.5em 1em;
-        background-color: #0077b6;
-        text-decoration: none;
-        color: white;
-        border-radius: 0.5em;
-        font-weight: bold;
-      }
-
-      .features {
-        padding: 2em 0;
-      }
-      .features > .container {
-        margin: 0 auto;
-      }
-      .features h3 {
-        font-size: 1.5em;
-        margin-bottom: 1em;
-        font-weight: bold;
-        color: #333;
-        text-align: center;
-      }
-      .features ul {
-        display: flex;
-        gap: 2em;
-        justify-content: center;
-        align-items: flex-start;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        flex-wrap: wrap; /* for responsiveness */
-      }
-
-      .features li {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        flex: 1;
-        min-width: 200px;
-        max-width: 250px;
-      }
-
-      .features li img {
-        margin-bottom: 1em;
-      }
-
-      .features li p {
-        margin: 0;
-        font-size: 1em;
-        color: #555;
-        line-height: 1.5;
-      }
-
-      footer {
-        padding: 2em 0;
-        background-color: #f0f4ff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="/static/css/index-style.css"/>
+    <link rel="stylesheet" href="/static/css/common.css"/>
   </head>
 
   <body>
+
     <header>
       <div class="container">
         <div id="logo">
@@ -184,7 +41,7 @@
           cards. It's like a digital flashcard app, but for your brain.
         </p>
 
-        <a href="/decks" class="cta-button">Start learning</a>
+        <a href="/deck" class="cta-button">Start learning</a>
       </div>
     </div>
 
