--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -49,8 +49,20 @@
                         />
                     </div>
                     <div class="form-actions">
-                        <button type="button" id="close-create-deck-btn">Close</button>
-                        <button type="submit">Create Deck</button>
+                        <button
+                            type="button"
+                            id="close-create-deck-btn"
+                            class="cancel-button"
+                        >
+                        Cancel
+                        </button>
+                        <button
+                            type="submit"
+                            id="sumbit-create-deck-btn"
+                            class="confirm-button"
+                        >
+                        Create
+                        </button>
                     </div>
                 </form>
             </div>
