--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -78,3 +78,10 @@ input[type="text"] {
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 0.5em;
 }
+
+.hint {
+    font-size: 0.8em;
+    color: #666;
+    margin: 0;
+    display: block;
+}
