--- a/app/static/css/deck-style.css
+++ b/app/static/css/deck-style.css
@@ -41,15 +41,15 @@ main {
 }
 
 .modal {
+    display: none;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .modal .container {
@@ -78,6 +78,7 @@ main {
     align-items: center;
     gap: 1em;
     width: 25%;
+    padding: 0 1em;
     margin-left: auto;
 }
 
@@ -86,14 +87,22 @@ main {
 }
 
 
-/* .deck { */
-/*     list-style: none; */
-/*     padding: 1em; */
-/*     border: 1px solid rgba(0, 0, 0, 0.1); */
-/*     border-radius: 0.5em; */
-/*     margin-bottom: 1em; */
-/*     display: flex; */
-/*     justify-content: space-between; */
-/*     align-items: center; */
-/*     gap: 1em; */
-/* } */
+#decks {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
+}
+
+.deck {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 40%;
+    min-height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5em;
+}
