--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -53,6 +53,53 @@ footer {
   align-items: center;
 }
 
+.modal {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal .container {
+    background-color: #fff;
+    padding: 2em;
+    border-radius: 0.5em;
+}
+
+.modal form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.modal .input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    width: 100%;
+    margin-bottom: 1em;
+}
+
+.modal .form-actions {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1em;
+    width: 25%;
+    padding: 0 1em;
+    margin-left: auto;
+}
+
+.form-actions button {
+    flex: 1;
+}
+
+
 .confirm-button {
     background-color: #00c676;
     color: #fff;
