--- a/app/static/css/deck-style.css
+++ b/app/static/css/deck-style.css
@@ -1,108 +1,72 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 main {
-    flex: 1;
-}
-
-.actions {
-    display: flex;
-    padding: 1.5em;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 0.5em;
+  flex: 1;
 }
 
 .container {
-    margin: auto;
-    width: 100%;
+  margin: auto;
+  width: 100%;
 }
 
-
-.actions button {
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    padding: 0.5em 1em;
-    border-radius: 0.5em;
-    font-weight: bold;
-    cursor: pointer;
+main .container {
+  margin: auto;
 }
 
-#new-deck-btn {
-    background-color: #ffdc3f;
-    color: #666;
+main > .container > h2 {
+  padding: 0.5em 1em;
+  font-size: 2em;
 }
 
-#delete-all-btn {
-    background-color: #ff6b6b;
-    color: #fff;
+.deck-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.modal {
-    display: none;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+.deck-header .deck-header-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
 }
 
-.modal .container {
-    background-color: #fff;
-    padding: 2em;
-    border-radius: 0.5em;
+.deck-header .deck-header-title > a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
-.modal form {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+.deck-header .actions {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  width: fit-content;
 }
 
-.modal .input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    width: 100%;
-    margin-bottom: 1em;
+.deck-header button {
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
-.modal .form-actions {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 1em;
-    width: 25%;
-    padding: 0 1em;
-    margin-left: auto;
+#open-new-card-modal {
+  background-color: #ffdc3f;
+  color: #666;
 }
 
-.form-actions button {
-    flex: 1;
-}
-
-
-#decks {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-    justify-content: center;
-    align-items: center;
-}
-
-.deck {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    width: 40%;
-    min-height: 50px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 0.5em;
+#open-delete-all-modal {
+  background-color: #ff6b6b;
+  color: #fff;
 }
