--- a/app/static/css/deck-style.css
+++ b/app/static/css/deck-style.css
@@ -81,8 +81,22 @@ main > .container > h2 {
   align-items: center;
 }
 
+.card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    gap: 0.5em;
+    flex: 1
+}
+
+.card-btn {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
 .card {
-  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -94,5 +108,12 @@ main > .container > h2 {
 
 .card .answer {
     display: none;
+}
+
+.card-actions {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 0.5em;
 }
 
