--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ deck.name }}</title>
+
     <link rel="stylesheet" href="/static/css/common.css" />
     <link rel="stylesheet" href="/static/css/deck-style.css" />
   </head>
@@ -121,12 +122,32 @@
       <div class="container">
         <div class="cards">
           {% for card_id, card in deck.cards.items() %}
-          <div class="card" data-card-id="{{ card_id }}" data-flipped="false">
-            <div class="question">
-              <h3>{{ card.question }}</h3>
+          <div class="card-container">
+            <div class="card-actions">
+              <button class="card-btn edit-card">
+                <img
+                  src="/static/svg/edit.svg"
+                  alt="edit icon"
+                  width="18"
+                  height="18"
+                />
+              </button>
+              <button class="card-btn delete-card">
+                <img
+                  src="/static/svg/trash.svg"
+                  alt="trash icon"
+                  width="18"
+                  height="18"
+                />
+              </button>
             </div>
-            <div class="answer">
-              <h3>{{ card.answer }}</h3>
+            <div class="card" data-card-id="{{ card_id }}" data-flipped="false">
+              <div class="question">
+                <h3>{{ card.question }}</h3>
+              </div>
+              <div class="answer">
+                <h3>{{ card.answer }}</h3>
+              </div>
             </div>
           </div>
           {% endfor %}
@@ -199,8 +220,6 @@
           const flipped = convertStringToBoolean(
             card.getAttribute("data-flipped"),
           );
-
-          console.log(flipped);
 
           if (flipped) {
             card.setAttribute("data-flipped", "false");
