--- a/app/static/css/deck-style.css
+++ b/app/static/css/deck-style.css
@@ -72,49 +72,57 @@ main > .container > h2 {
 }
 
 .cards {
-  margin-top: 1em;
   display: flex;
-  width: 100%;
   flex-wrap: wrap;
+  margin: 1em 0;
+  width: 100%;
   gap: 1em;
   justify-content: center;
   align-items: center;
 }
 
 .card-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    cursor: pointer;
-    gap: 0.5em;
-    flex: 1;
-    min-width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+  gap: 0.5em;
+  flex: 1;
+  min-width: 30%;
 }
 
 .card-btn {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .card {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+
   cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 0.5em;
+  height: 300px;
+
+  text-align: center;
+  overflow: scroll;
+}
+
+.answer,
+.question {
+  padding: 0.5em;
 }
 
 .card .answer {
-    display: none;
+  display: none;
 }
 
 .card-actions {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 0.5em;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 0.5em;
 }
-
