--- a/app/templates/deck.html
+++ b/app/templates/deck.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="container">
-        <div id="logo">
+        <a id="logo" href="/">
           <img
             src="/static/svg/stack.svg"
             alt="Stack Icon"
@@ -19,7 +19,7 @@
             height="48"
           />
           <h1>Recallr</h1>
-        </div>
+        </a>
         <nav>
           <ul>
             <li><a href="/help">Help</a></li>
