--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recallr: Flash Cards for smarter learning</title>
-    <link rel="stylesheet" href="/static/css/index-style.css"/>
-    <link rel="stylesheet" href="/static/css/common.css"/>
+    <link rel="stylesheet" href="/static/css/index-style.css" />
+    <link rel="stylesheet" href="/static/css/common.css" />
   </head>
 
   <body>
-
     <header>
       <div class="container">
-        <div id="logo">
+        <a id="logo" href="/">
           <img
             src="/static/svg/stack.svg"
             alt="Stack Icon"
@@ -20,7 +19,7 @@
             height="48"
           />
           <h1>Recallr</h1>
-        </div>
+        </a>
         <nav>
           <ul>
             <li><a href="/help">Help</a></li>
