--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -14,13 +14,13 @@ header h1 {
 }
 
 #logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5em;
-    width: fit-content;
-    cursor: pointer;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  width: fit-content;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .container {
@@ -47,7 +47,7 @@ nav > ul > li > a {
 }
 
 footer {
-  padding: 2em 0;
+  padding: 0.5em 0;
   background-color: #f0f4ff;
   display: flex;
   justify-content: center;
@@ -55,81 +55,125 @@ footer {
 }
 
 .modal {
-    display: none;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal .container {
-    background-color: #fff;
-    padding: 2em;
-    border-radius: 0.5em;
+  background-color: #fff;
+  padding: 2em;
+  border-radius: 0.5em;
 }
 
 .modal form {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
 }
 
 .modal .input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    width: 100%;
-    margin-bottom: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  width: 100%;
+  margin-bottom: 1em;
 }
 
 .modal .form-actions {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 1em;
-    width: 25%;
-    padding: 0 1em;
-    margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1em;
+  width: 25%;
+  padding: 0 1em;
+  margin-left: auto;
 }
 
 .form-actions button {
-    flex: 1;
+  flex: 1;
 }
 
-
 .confirm-button {
-    background-color: #00c676;
-    color: #fff;
-    border: none;
-    padding: 0.5em 1em;
-    border-radius: 0.5em;
-    font-weight: bold;
-    cursor: pointer;
+  background-color: #00c676;
+  color: #fff;
+  border: none;
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .cancel-button {
-    background-color: #ff6b6b;
-    color: white;
-    border: none;
-    padding: 0.5em 1em;
-    border-radius: 0.5em;
-    font-weight: bold;
-    cursor: pointer;
+  background-color: #ff6b6b;
+  color: white;
+  border: none;
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 input[type="text"] {
-    padding: 0.5em;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 0.5em;
+  padding: 0.5em;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.5em;
 }
 
 .hint {
-    font-size: 0.8em;
-    color: #666;
-    margin: 0;
-    display: block;
+  font-size: 0.8em;
+  color: #666;
+  margin: 0;
+  display: block;
+}
+
+.main {
+    position: relative;
+}
+
+.deck-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  padding: 1em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 1em;
+}
+
+.deck-header .deck-header-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+}
+
+.deck-header .deck-header-title > a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.deck-header .actions {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  width: fit-content;
+}
+
+.actions button {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0.5em 1em;
+  border-radius: 0.5em;
+  font-weight: bold;
+  cursor: pointer;
 }
